# localhost

./: Cargo.toml  bug.todo  config.json  config.toml  doc.md  readme.md  task.todo
src/: lib.rs  main.rs
src/cgi/: handler.rs  mod.rs
src/config/: config.rs
src/error/: log.rs  mod.rs
src/request/: mod.rs  parse_header.rs
src/response/: mod.rs  response.rs  status_code.rs
src/server/: connection.rs  mod.rs  server.rs
test/errorpage/: 404.html
test/html/: form.html  index.html  page.html  secrete.html  test.html
test/php/: index.php
test/python/: index.py
